_archive/k8s_2-DEPRECATED/gateway/httproute-librenms.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librenms
  namespace: librenms
spec:
  parentRefs:
    - name: librenms-gateway
      namespace: librenms
  hostnames:
    - librenms.cpa-sante.priv   # Adapter au DNS interne
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: librenms
          port: 80
